<resources>
    <string name="app_name">Ciclo inteligente</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciar_Sesion">Iniciar Sesion</string>
    <string name="Registrar">Registrar</string>
    <string name="notinescuenta">¿No tienes cuenta? Registrate aqui</string>
    <string name="Creacontresaña">Ingresar contraseña</string>
    <string name="ConfiContraseña">Confirmar contraseña</string>
    <string name="Ingresacorreo">Ingresar correo</string>
    <string name="nombre">Ingresar nombre</string>
    <string name="edad">Ingresar edad</string>
</resources>